--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,15 @@
     </header>
     <main id="content" class="main-content" role="main" style="max-width: 74em;">
       {{ content }}
-      <footer class="site-footer">
+
+
+      
+      
+      
+        
+
+
+      <footer class="site-footer" style="position: absolute; height: 2.5rem; width: 100%; bottom: 0;">
         <span class="site-footer-owner"><a href="https://www.linkedin.com/in/hakob-ter-petrosyan/"  target="_blank">Hakob Ter-Petrosyan's blog.</span>
       </footer>
     </main>
