--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <main id="content" class="main-content" role="main" style="max-width: 74em;">
       {{ content }}
 
-      <footer class="site-footer" style="position: absolute; height: 4rem; width: 100%; bottom: 0;">
+      <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://www.linkedin.com/in/hakob-ter-petrosyan/"  target="_blank">Hakob Ter-Petrosyan's blog.</span>
       </footer>
     </main>
