--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       {{ content }}
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://www.linkedin.com/in/hakob-ter-petrosyan/"  target="_blank">Hakob Ter-Petrosyan's blog.</span>
+        <span class="site-footer-credits"><a href="https://www.linkedin.com/in/hakob-ter-petrosyan/"  target="_blank">Hakob Ter-Petrosyan's blog.</span>
       </footer>
     </main>
   </body>
